[gd_scene load_steps=7 format=3 uid="uid://bt4pnhd7cx7xc"]

[ext_resource type="Script" uid="uid://uqtwv08m1ohx" path="res://Components/Mechanics/Buttons/button.gd" id="1_vxja4"]
[ext_resource type="Texture2D" uid="uid://bmbckmn4ckn0o" path="res://Assets/Buttons/button_pressed.png" id="2_wla0f"]
[ext_resource type="Texture2D" uid="uid://dyldvkreuoxrv" path="res://Assets/Buttons/button_unpressed.png" id="3_ldaxc"]
[ext_resource type="AudioStream" uid="uid://degn8ya32ef5u" path="res://Sounds/SFX/button_on.mp3" id="4_edukx"]
[ext_resource type="AudioStream" uid="uid://7cr6m3opt7u7" path="res://Sounds/SFX/button_off.mp3" id="5_edukx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kp8h"]
size = Vector2(28, 24)

[node name="Button" type="Node2D"]
modulate = Color(1.25, 1.25, 1.25, 1)
script = ExtResource("1_vxja4")

[node name="Button_GREEN" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_wla0f")

[node name="Button_RED" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_ldaxc")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 2050

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -4)
shape = SubResource("RectangleShape2D_2kp8h")

[node name="AudioPushButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_edukx")
volume_db = 5.0
bus = &"sfx"

[node name="AudioLeave" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_edukx")
volume_db = 5.0
bus = &"sfx"

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
